--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
+@import "Normalize.css";
+
 body {
   margin: 0;
   background-color: black;
   overflow-x: hidden;
   width: 100vw;
-  font-size: medium;
+
+  -webkit-text-size-adjust: 80%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
